objects/FSL_SPHeader_Stage__c.object
<CustomObject>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <label>AccountStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>BusinessUnit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMISPExpirationDate__c</fullName>
        <label>CMISPExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CampaignTRP__c</fullName>
        <label>CampaignTRP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationEndDate__c</fullName>
        <label>CertificationEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimAllowedDays__c</fullName>
        <label>ClaimAllowedDays</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommunicationMethod__c</fullName>
        <label>CommunicationMethod</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunicationOccurrence__c</fullName>
        <label>CommunicationOccurrence</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostEffectiveExclusion__c</fullName>
        <label>CostEffectiveExclusion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CutOffClaimAmt__c</fullName>
        <label>CutOffClaimAmt</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSID__c</fullName>
        <label>DSID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTNAFlag__c</fullName>
        <label>DTNAFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisableWebAccessFlag__c</fullName>
        <label>DisableWebAccessFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistHQCode__c</fullName>
        <label>DistHQCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistHQName__c</fullName>
        <label>DistHQName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureReason__c</fullName>
        <label>FailureReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreezeSubmitButton__c</fullName>
        <label>FreezeSubmitButton</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>GroupName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTAFlag__c</fullName>
        <label>LTAFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxClaimAmt__c</fullName>
        <label>MaxClaimAmt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewOEM__c</fullName>
        <label>NewOEM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutFileAllClaims__c</fullName>
        <label>OutFileAllClaims</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACCAR__c</fullName>
        <label>PACCAR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMUSplitPayment__c</fullName>
        <label>PMUSplitPayment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSBUProductCertification__c</fullName>
        <label>PSBUProductCertification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryOEMCode__c</fullName>
        <label>PrimaryOEMCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryOEMName__c</fullName>
        <label>PrimaryOEMName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCertificationFlag__c</fullName>
        <label>ProductCertificationFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionIdFlag__c</fullName>
        <label>PromotionIdFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionId__c</fullName>
        <label>PromotionId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSSRespBranchName__c</fullName>
        <label>RSSRespBranchName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCode__c</fullName>
        <label>RegionCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepairLevel__c</fullName>
        <label>RepairLevel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespBranchCode__c</fullName>
        <label>RespBranchCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespBranchName__c</fullName>
        <label>RespBranchName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMDeductible__c</fullName>
        <label>SCMDeductible</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMDollarAmt__c</fullName>
        <label>SCMDollarAmt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPBillToCode__c</fullName>
        <label>SPBillToCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPBillToName__c</fullName>
        <label>SPBillToName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPChannelCode__c</fullName>
        <label>SPChannelCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPChannelOfDistribution__c</fullName>
        <label>SPChannelOfDistribution</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <externalId>true</externalId>
        <label>SPCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEmail__c</fullName>
        <label>SPEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPFirstName__c</fullName>
        <label>SPFirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPLastName__c</fullName>
        <label>SPLastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRecertificationDate__c</fullName>
        <label>SPRecertificationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPRow_Id__c</fullName>
        <externalId>true</externalId>
        <label>SPRow_Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddress1__c</fullName>
        <label>StreetAddress1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddress2__c</fullName>
        <label>StreetAddress2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetAddress3__c</fullName>
        <label>StreetAddress3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechActualHoursRequired__c</fullName>
        <label>TechActualHoursRequired</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryCode__c</fullName>
        <label>TerritoryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>UpdatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ViewDollarAmount__c</fullName>
        <label>ViewDollarAmount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWSPSFlag__c</fullName>
        <label>WWSPSFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyEmail__c</fullName>
        <label>WarrantyEmail</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WarrantyFax__c</fullName>
        <label>WarrantyFax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyTrainingStatus__c</fullName>
        <label>WarrantyTrainingStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WrntyTrainingCertification__c</fullName>
        <label>WrntyTrainingCertification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>ZipPostalCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>FSL_SPHeader_Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FSL_SPHeader_Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL_SPHeader_Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>